--- a/Client/resources/Login.fxml
+++ b/Client/resources/Login.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -46,12 +47,7 @@
             </GridPane>
             <Label fx:id="login_user_nameI" alignment="CENTER" prefHeight="38.0" prefWidth="194.0" text="Prihlasovacie meno" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label fx:id="login_pass" alignment="CENTER" prefHeight="58.0" prefWidth="217.0" text="Heslo" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <TextField fx:id="login_user_name" prefHeight="35.0" prefWidth="163.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
-               <GridPane.margin>
-                  <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
-               </GridPane.margin>
-            </TextField>
-            <TextField fx:id="login_user_pass" prefHeight="50.0" prefWidth="160.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
+            <TextField fx:id="login_user_name" prefHeight="95.0" prefWidth="227.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
                </GridPane.margin>
@@ -66,6 +62,7 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
             </Button>
+            <PasswordField fx:id="login_user_pass" prefHeight="33.0" prefWidth="146.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
          </children>
       </GridPane>
    </children>
