3 new languages and refresh my film added

--- a/Client/resources/UserMovies.fxml
+++ b/Client/resources/UserMovies.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
@@ -56,18 +55,19 @@
                   </Label>
                </children>
             </GridPane>
-            <HBox alignment="TOP_RIGHT" prefHeight="34.0" prefWidth="549.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <children>
-                  <Button fx:id="user_movies_back" alignment="TOP_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#userWindow" text="Button" textAlignment="CENTER">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                     <HBox.margin>
-                        <Insets right="2.0" top="5.0" />
-                     </HBox.margin>
-                  </Button>
-               </children>
-            </HBox>
+            <Button fx:id="user_movies_refresh" mnemonicParsing="false" onMouseClicked="#userMovies" prefHeight="25.0" prefWidth="66.0" text="Refresh" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets left="250.0" />
+               </GridPane.margin>
+            </Button>
+            <Button fx:id="user_movies_back" alignment="TOP_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#userWindow" text="Button" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <GridPane.margin>
+                  <Insets left="450.0" />
+               </GridPane.margin>
+            </Button>
          </children>
       </GridPane>
    </children>
