--- a/Client/resources/Login.fxml
+++ b/Client/resources/Login.fxml
@@ -2,9 +2,11 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -21,8 +23,8 @@
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="243.0" minWidth="10.0" prefWidth="37.40003662109376" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="91.79999389648438" minHeight="10.0" prefHeight="91.79999389648438" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="70.79998779296875" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="115.20001220703125" minHeight="10.0" prefHeight="115.20001220703125" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="70.79998779296875" minHeight="10.0" prefHeight="11.999987792968753" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="82.20001831054688" minHeight="4.599981689453131" prefHeight="35.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="82.20001831054688" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="82.20001831054688" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
@@ -31,8 +33,8 @@
          <children>
             <GridPane GridPane.columnIndex="3">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="87.5999755859375" minWidth="10.0" prefWidth="58.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="146.800048828125" minWidth="10.0" prefWidth="130.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="166.79996337890626" minWidth="10.0" prefWidth="153.19998779296876" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="146.800048828125" minWidth="10.0" prefWidth="63.600012207031256" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -40,14 +42,21 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="login_en" mnemonicParsing="false" onMouseClicked="#changeLangLoginEN" prefHeight="42.0" prefWidth="154.0" text="English" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Label fx:id="login_lang" alignment="CENTER" prefHeight="36.0" prefWidth="136.0" text="Jazyk" GridPane.columnIndex="1" />
-                  <Button fx:id="login_sk" alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#changeLangLoginSK" prefHeight="56.0" prefWidth="232.0" text="Slovenčina" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label fx:id="login_lang" alignment="CENTER" prefHeight="37.0" prefWidth="161.0" text="Jazyk" />
+                  <Button fx:id="login_lang_change" alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#changeLangLogin" prefHeight="56.0" prefWidth="232.0" text="-&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </GridPane.margin></Button>
+                  <ComboBox fx:id="language" prefHeight="38.0" prefWidth="159.0" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </GridPane.margin>
+                  </ComboBox>
                </children>
             </GridPane>
-            <Label fx:id="login_user_nameI" alignment="CENTER" prefHeight="38.0" prefWidth="194.0" text="Prihlasovacie meno" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label fx:id="login_pass" alignment="CENTER" prefHeight="58.0" prefWidth="217.0" text="Heslo" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <TextField fx:id="login_user_name" prefHeight="95.0" prefWidth="227.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Label fx:id="login_user_nameI" alignment="CENTER" prefHeight="38.0" prefWidth="194.0" text="Prihlasovacie meno" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label fx:id="login_pass" alignment="CENTER" prefHeight="58.0" prefWidth="217.0" text="Heslo" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="login_user_name" prefHeight="95.0" prefWidth="227.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
                </GridPane.margin>
@@ -62,7 +71,8 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
             </Button>
-            <PasswordField fx:id="login_user_pass" prefHeight="33.0" prefWidth="146.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <PasswordField fx:id="login_user_pass" prefHeight="33.0" prefWidth="146.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <ImageView fx:id="login_logo" fitHeight="114.0" fitWidth="153.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
          </children>
       </GridPane>
    </children>
